# gvrender

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.rst  justfile  pyproject.toml
.github/workflows/: ci.yml
gvrender/: matplotlib.py  types.py
src/: lib.rs
src/gvrender/: __init__.py  _version.py  matplotlib.py  types.py
stubs/matplotlib/: artist.pyi  axes.pyi  lines.pyi  patches.pyi  path.pyi  pyplot.pyi  text.pyi  transform.pyi
stubs/xdot/dot/: parser.pyi
stubs/xdot/ui/: elements.pyi  pen.pyi
tests/: test_matplotlib.py
typings/: pygraphviz.pyi
typings/matplotlib/: _enums.pyi  _types.pyi  artist.pyi  axes.pyi  cm.pyi  collections.pyi  container.pyi  figure.pyi  font_manager.pyi  image.pyi  legend.pyi  lines.pyi  patches.pyi  path.pyi  pyplot.pyi  table.pyi  text.pyi  transform.pyi
typings/xdot_rs/: __init__.pyi  draw.pyi  shapes.pyi
