[build-system]
requires = ['flit_core >=3.2,<4', 'get_version']
build-backend = 'flit_core.buildapi'

[project]
name = 'gvrender'
authors = [{ name = 'Phil A.', email = 'flying-sheep@web.de' }]
readme = 'README.rst'
classifiers = [
    'License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)',
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3',
]
dynamic = ['version', 'description']
requires-python = '>=3.8'
dependencies = [
    'get_version',
    'PyGraphviz',
    'xdot-rs >=0.2.3',
    'matplotlib',
    'numpy>=1.20',  # numpy.typing
    'typing-extensions; python_version < "3.12"',
]

[project.optional-dependencies]
test = [
    'pytest',
    'pytest-mpl',
]

[project.urls]
# Documentation = 'https://gvrender.readthedocs.org/en/latest/'
Source = 'https://github.com/flying-sheep/gvrender'

[tool.black]
line-length = 100
skip-string-normalization = true

[tool.ruff]
line-length = 100
select = [
    # Pyflakes
    'F',
    # Pycodestyle
    'E',
    'W',
    # isort
    'I001',
    # pyupgrade
    'UP',
]
src = ['src', 'tests']

[tool.pytest.ini_options]
addopts = '-Werror --import-mode=importlib --mpl'
xfail_strict = true

[tool.pyright]
include = ['src']
