[build-system]
build-backend = 'hatchling.build'
requires = ['hatchling', 'hatch-vcs']

[project]
name = 'gvrender'
description = 'Renders GraphViz graphs to Matplotlib surfaces.'
authors = [{ name = 'Phil A.', email = 'flying-sheep@web.de' }]
readme = 'README.rst'
license = 'GPL-3.0-or-later'
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3',
]
dynamic = ['version']
requires-python = '>=3.8'
dependencies = [
    'PyGraphviz',
    'xdot-rs >=0.2.3',
    'matplotlib',
    'numpy>=1.20',  # numpy.typing
    'typing-extensions; python_version < "3.12"',
]

[project.optional-dependencies]
test = [
    'pytest',
    'pytest-mpl',
]

[project.urls]
# Documentation = 'https://gvrender.readthedocs.org/en/latest/'
Source = 'https://github.com/flying-sheep/gvrender'

[tool.hatch.version]
source = 'vcs'
[tool.hatch.build.hooks.vcs]
version-file = 'src/gvrender/_version.py'

[tool.black]
line-length = 100
skip-string-normalization = true

[tool.ruff]
line-length = 100
select = [
    'F',  # Pyflakes
    'E',  # Pycodestyle errors
    'W',  # Pycodestyle warnings
    'I001',  # isort
    'UP',  # pyupgrade
    'Q', # flake8-quotes
]
src = ['src', 'tests']
[tool.ruff.flake8-quotes]
inline-quotes = 'single'
multiline-quotes = 'single'

[tool.pytest.ini_options]
addopts = '-Werror --import-mode=importlib --mpl'
xfail_strict = true

[tool.pyright]
include = ['src']
