[build-system]
build-backend = 'hatchling.build'
requires = ['hatchling', 'hatch-vcs']

[project]
name = 'gvrender'
description = 'Renders GraphViz graphs to Matplotlib surfaces.'
authors = [{ name = 'Phil A.', email = 'flying-sheep@web.de' }]
readme = 'README.rst'
license = 'GPL-3.0-or-later'
classifiers = [
  'Development Status :: 4 - Beta',
  'Intended Audience :: Developers',
  'Programming Language :: Python :: 3',
]
dynamic = ['version']
requires-python = '>=3.9'
dependencies = [
  'PyGraphviz',
  'xdot-rs >=0.2.3',
  'matplotlib',
  'numpy>=1.20',                                # numpy.typing
  'typing-extensions; python_version < "3.12"',
]

[project.optional-dependencies]
test = ['pytest', 'pytest-mpl']

[project.urls]
# Documentation = 'https://gvrender.readthedocs.org/en/latest/'
Source = 'https://github.com/flying-sheep/gvrender'

[tool.hatch.version]
source = 'vcs'
[tool.hatch.build.hooks.vcs]
version-file = 'src/gvrender/_version.py'

[tool.hatch.envs.test]
python = '3.12'
features = ['test']
[tool.hatch.envs.test.scripts]
run = 'pytest -vv {args}'
baseline = 'pytest --mpl-generate-path=tests/baseline'

[tool.ruff]
line-length = 100
src = ['src', 'tests']
[tool.ruff.lint]
select = [
  'F',    # Pyflakes
  'E',    # Pycodestyle errors
  'W',    # Pycodestyle warnings
  'I001', # isort
  'UP',   # pyupgrade
]
[tool.ruff.lint.isort]
known-first-party = ["gvrender"]
required-imports = ["from __future__ import annotations"]
[tool.ruff.format]
quote-style = 'single'

[tool.pytest.ini_options]
addopts = '--import-mode=importlib --mpl'
xfail_strict = true
filterwarnings = [
  'error',
  'ignore:datetime.datetime.utcfromtimestamp\(\) is deprecated',
]

[tool.pyright]
include = ['src']

[tool.mypy]
strict = true
explicit_package_bases = true
mypy_path = "src:typings"
